--- a/index.html
+++ b/index.html
@@ -4,9 +4,8 @@
   <body>
    <ul>
      <br>
-     <li><a href = "https://www.nytimes.com/games/wordle/index.html"> Daily Wordle </a> </li>
-     <li><a href = "https://www.nike.com"> Nike </a></li> 
-     <li><a href = "https://www.adidas.com/us"> Adidas </a> </li>
+     <li><a href = https://codepen.io/Andrew-Alrayes/pen/mdzzOrd> Created Apps </a> </li>
+     <li><a href = https://codepen.io/Andrew-Alrayes/pen/vYVPBmj>Art Work </a></li> 
    <center>
    <h1> Welcome to APCSP Spring 2023<h1>
  <h2> Code.org Projects <h2>
