--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
   <body>
    <ul>
      <br>
-     <li><a href = "index.html"> Home Page </a> </li>
-     <li><a href = "index.html 1"> Created Apps </a> </li>
-     <li><a href = https://codepen.io/Andrew-Alrayes/pen/vYVPBmj>Art Work </a></li> 
+     <li><a href = index.html> Home Page </a> </li>
+     <li><a href = index.html1> Created Apps </a> </li>
+     <li><a href = index.html2>Art Work </a></li> 
    <center>
    <h1> Welcome to APCSP Spring 2023<h1>
  <h1> Code.org Projects <h1>
