--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html>
   <head>
+    <link rel ="stylesheet" href=style.css">
     <link rel = https://www.google.com/search?surl=1&safe=active&rlz=1C1GCEB_enUS1056US1056&q=NBA+images&tbm=isch&sa=X&ved=2ahUKEwiksb-VtPr-AhWxIUQIHWUkAecQ0pQJegQIDhAB&biw=1229&bih=932&dpr=1#imgrc=bBbp1XN5vRRKrM>
   <body>
    <ul>
