--- a/index2.html
+++ b/index2.html
@@ -1,5 +1,6 @@
 <html>
  <head>
+   <link rel ="stylesheet" href=style.css">
       <ul>
      <br>
   <li><a href = index.html> Home Page </a> </li>
