--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
   <body>
    <ul>
      <br>
-     <li><a href = index.html> Home Page </a> </li>
-     <li><a href = index.html1> Created Apps </a> </li>
-     <li><a href = index.html2>Art Work </a></li> 
+     <li><a href = https://wvcs.github.io/website-andrewalrayes/index.html> Home Page </a> </li>
+     <li><a href = https://wvcs.github.io/website-andrewalrayes/index.html1> Created Apps </a> </li>
+     <li><a href = https://wvcs.github.io/website-andrewalrayes/index.html2>Art Work </a></li> 
    <center>
    <h1> Welcome to APCSP Spring 2023<h1>
  <h1> Code.org Projects <h1>
