--- a/index1.html
+++ b/index1.html
@@ -4,9 +4,9 @@
    <body>
    <ul>
      <br>
-       <li><a href = index.html> Home Page </a> </li>
-     <li><a href = index.html1> Created Apps </a> </li>
-     <li><a href = index.html2>Art Work </a></li> 
+       <li><a href = https://wvcs.github.io/website-andrewalrayes/index.html> Home Page </a> </li>
+     <li><a href = https://wvcs.github.io/website-andrewalrayes/index.html1> Created Apps </a> </li>
+     <li><a href = https://wvcs.github.io/website-andrewalrayes/index.html2>Art Work </a></li> 
   <center>
   <h1> Created Apps<h1>
   <h4> Dataset App <h4>
