--- a/index2.html
+++ b/index2.html
@@ -3,9 +3,9 @@
    <link rel ="stylesheet" href=style.css">
       <ul>
      <br>
-  <li><a href = index.html> Home Page </a> </li>
-     <li><a href = index.html1> Created Apps </a> </li>
-     <li><a href = index.html2>Art Work </a></li> 
+  <li><a href = https://wvcs.github.io/website-andrewalrayes/index.html> Home Page </a> </li>
+     <li><a href = https://wvcs.github.io/website-andrewalrayes/index.html1> Created Apps </a> </li>
+     <li><a href = https://wvcs.github.io/website-andrewalrayes/index.html2>Art Work </a></li> 
 <center>   
   <h1> Art work <h1> 
 <h2> Digtal Design <h2>
