--- a/index1.html
+++ b/index1.html
@@ -17,4 +17,5 @@
       <iframe width="392" height="620" style="border: 0px;" src="https://studio.code.org/projects/applab/D-jA7DPefA2vgaTgSqOgKObqfbGEPLOxe_Spdvn7oNA/embed"></iframe>
     <h4> Forecaster app <h4>
    <iframe width="392" height="620" style="border: 0px;" src="https://studio.code.org/projects/applab/UUe7AFXaG1A9BF04Aj7swYYtY2XigImbEeQDvoxo1BQ/embed"></iframe>
+   </body>
   <html>
