--- a/index1.html
+++ b/index1.html
@@ -1,12 +1,11 @@
 <html>
 <head>
-    <link rel ="stylesheet" href=style.css">
    <body>
    <ul>
      <br>
-       <li><a href = https://wvcs.github.io/website-andrewalrayes/index.html> Home Page </a> </li>
-     <li><a href = https://wvcs.github.io/website-andrewalrayes/index.html1> Created Apps </a> </li>
-     <li><a href = https://wvcs.github.io/website-andrewalrayes/index.html2>Art Work </a></li> 
+     <li><a href =https://codepen.io/Andrew-Alrayes/pen/GRYBawE> Home Page </a> </li>
+     <li><a href = https://codepen.io/Andrew-Alrayes/pen/mdzzOrd> Created Apps </a> </li>
+     <li><a href = https://codepen.io/Andrew-Alrayes/pen/vYVPBmj>Art Work </a></li> 
   <center>
   <h1> Created Apps<h1>
   <h4> Dataset App <h4>
@@ -17,5 +16,4 @@
       <iframe width="392" height="620" style="border: 0px;" src="https://studio.code.org/projects/applab/D-jA7DPefA2vgaTgSqOgKObqfbGEPLOxe_Spdvn7oNA/embed"></iframe>
     <h4> Forecaster app <h4>
    <iframe width="392" height="620" style="border: 0px;" src="https://studio.code.org/projects/applab/UUe7AFXaG1A9BF04Aj7swYYtY2XigImbEeQDvoxo1BQ/embed"></iframe>
-   </body>
   <html>
