--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
   <body>
    <ul>
      <br>
-     <li><a href =https://codepen.io/Andrew-Alrayes/pen/GRYBawE> Home Page </a> </li>
-     <li><a href = https://codepen.io/Andrew-Alrayes/pen/mdzzOrd> Created Apps </a> </li>
-     <li><a href = https://codepen.io/Andrew-Alrayes/pen/vYVPBmj>Art Work </a></li> 
+     <li><a href =index.html> Home Page </a> </li>
+     <li><a href = index2.html> Created Apps </a> </li>
+     <li><a href = index3.html>Art Work </a></li> 
    <center>
    <h1> Welcome to APCSP Spring 2023<h1>
  <h1> Code.org Projects <h1>
