--- a/index3.html
+++ b/index3.html
@@ -2,9 +2,9 @@
  <head>
       <ul>
      <br>
-     <li><a href =https://codepen.io/Andrew-Alrayes/pen/GRYBawE> Home Page </a> </li>
-     <li><a href = https://codepen.io/Andrew-Alrayes/pen/mdzzOrd> Created Apps </a> </li>
-     <li><a href = https://codepen.io/Andrew-Alrayes/pen/vYVPBmj>Art Work </a></li> 
+     <li><a href =index.html> Home Page </a> </li>
+     <li><a href = index2.html> Created Apps </a> </li>
+     <li><a href = index3.html>Art Work </a></li> 
 <center>   
   <h5> Art work <h1> 
 <h6> Digtal Design <h2>
