--- a/index2.html
+++ b/index2.html
@@ -4,9 +4,9 @@
    <body>
    <ul>
      <br>
-       <li><a href =index.html> Home Page </a> </li>
-     <li><a href = index2.html> Created Apps </a> </li>
-     <li><a href = index3.html>Art Work </a></li> 
+      <li><a href =https://wvcs.github.io/website-andrewalrayes/index.html> Home Page </a> </li>
+     <li><a href = https://wvcs.github.io/website-andrewalrayes/index2.html> Created Apps </a> </li>
+     <li><a href = https://wvcs.github.io/website-andrewalrayes/index3.html>Art Work </a></li> 
   <center>
   <h5> Created Apps<h1>
   <h4> Dataset App <h4>
