--- a/index3.html
+++ b/index3.html
@@ -3,9 +3,9 @@
     <link rel = "stylesheet" href=style3.css">
       <ul>
      <br>
-     <li><a href =index.html> Home Page </a> </li>
-     <li><a href = index2.html> Created Apps </a> </li>
-     <li><a href = index3.html>Art Work </a></li> 
+    <li><a href =https://wvcs.github.io/website-andrewalrayes/index.html> Home Page </a> </li>
+     <li><a href = https://wvcs.github.io/website-andrewalrayes/index2.html> Created Apps </a> </li>
+     <li><a href = https://wvcs.github.io/website-andrewalrayes/index3.html>Art Work </a></li> 
 <center>   
   <h5> Art work <h1> 
 <h6> Digtal Design <h2>
