--- a/index3.html
+++ b/index3.html
@@ -1,6 +1,6 @@
 <html>
  <head>
-    <link rel = "stylesheet" href=style3.css">
+    <link rel = "stylesheet" href="style3.css">
       <ul>
      <br>
     <li><a href =https://wvcs.github.io/website-andrewalrayes/index.html> Home Page </a> </li>
