--- a/index2.html
+++ b/index2.html
@@ -1,10 +1,10 @@
 <html>
-<head>
-  <link rel = "stylesheet" href="style2.css">
-   <body>
+  <head>
+    <link rel = "stylesheet" href="style2.css>
+  <body>
    <ul>
      <br>
-       <li><a href =https://wvcs.github.io/website-andrewalrayes/index.html> Home Page </a> </li>
+     <li><a href =https://wvcs.github.io/website-andrewalrayes/index.html> Home Page </a> </li>
      <li><a href = https://wvcs.github.io/website-andrewalrayes/index2.html> Created Apps </a> </li>
      <li><a href = https://wvcs.github.io/website-andrewalrayes/index3.html>Art Work </a></li> 
 
