--- a/index3.html
+++ b/index3.html
@@ -1,9 +1,10 @@
 <html>
- <head>
-    <link rel = "stylesheet" href="style3.css">
-      <ul>
+  <head>
+    <link rel = "stylesheet" href="style3.css>
+  <body>
+   <ul>
      <br>
-    <li><a href =https://wvcs.github.io/website-andrewalrayes/index.html> Home Page </a> </li>
+     <li><a href =https://wvcs.github.io/website-andrewalrayes/index.html> Home Page </a> </li>
      <li><a href = https://wvcs.github.io/website-andrewalrayes/index2.html> Created Apps </a> </li>
      <li><a href = https://wvcs.github.io/website-andrewalrayes/index3.html>Art Work </a></li> 
 <center>   
