--- a/index3.html
+++ b/index3.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <link rel = "stylesheet" href="style3.css>
+    <link rel = "stylesheet" href="style3.css">
   <body>
    <ul>
      <br>
